--- a/src/main/resources/arabic-ui-support.css
+++ b/src/main/resources/arabic-ui-support.css
@@ -6,3 +6,11 @@
     -fx-padding: 10;
     -fx-spacing: 8;
 }
+
+.view {
+    -fx-background-color: transparent;
+    -fx-border-color: lightgray;
+    -fx-border-width: 1px;
+    -fx-padding: 5;
+    -fx-spacing: 4;
+}
